--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 Verbrauch eines Gerätetyps.py
 
 Verbrauch eines Gerätetyps.py
+
+Python-Tutorial/.DS_Store
+
+Python-Tutorial/Farid/.DS_Store
+
+Python-Tutorial/Jakob/.DS_Store
