--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,13 @@ Python-Tutorial/.DS_Store
 Python-Tutorial/Farid/.DS_Store
 
 Python-Tutorial/Jakob/.DS_Store
+
+Release/Platine_Leiterplatte.png
+
+Release/Platine_Leiterplatte.png
+
+Arbeit/u.pxm
+
+Release/Platine_Leiterplatte.png
+
+Schaltplan.png
